--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
    </head>
    <body>
       <h1>Welcome to My Website!</h1>
+      <script src="source/helloworld.js"></script>
    </body>
 </html>
