Added different pages.

--- a/index.html
+++ b/index.html
@@ -6,8 +6,15 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>Home</title>
    </head>
+
    <body>
+      <div class="topbar">
+         <a class="topbar-disabled">Home</a>
+         <a class="topbar-enabled" href="pages/projects.html">Projects</a>
+         <a class="topbar-enabled" href="pages/blog.html">Blog</a>
+         <a class="topbar-enabled" href="pages/about.html">About</a>
+      </div>
       <h1>Welcome to My Website!</h1>
-      <script src="source/helloworld.js"></script>
+      <p>Everything's WIP!</p>
    </body>
 </html>
