--- a/pages/projects.html
+++ b/pages/projects.html
@@ -4,7 +4,7 @@
    <head>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>About</title>
+      <title>Projects</title>
    </head>
 
    <body>
@@ -14,7 +14,14 @@
          <a class="topbar-enabled" href="blog.html">Blog</a>
          <a class="topbar-enabled" href="about.html">About</a>
       </div>
+
       <h1>Projects</h1>
       <p>Showcase of my awesome projects!</p>
+
+      <!-- Dynamically add projects with JS -->
+      <div id="project-thumbnails"></div>
+      <div id="projects"></div>
+
+      <script src="../source/projects.js"></script>
    </body>
 </html>
