--- a/pages/about.html
+++ b/pages/about.html
@@ -5,16 +5,17 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>About</title>
+      <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
    </head>
 
-   <body>
-      <div class="topbar">
-         <a class="topbar-enabled" href="../index.html">Home</a>
-         <a class="topbar-enabled" href="projects.html">Projects</a>
-         <a class="topbar-enabled" href="blog.html">Blog</a>
-         <a class="topbar-disabled">About</a>
+   <body class="bg-zinc-900">
+      <div class="flex flex-row items-center justify-center">
+         <a class="mx-5 my-3 font-medium text-sky-400 hover:underline" href="../index.html">Home</a>
+         <a class="mx-5 my-3 font-medium text-sky-400 hover:underline" href="projects.html">Projects</a>
+         <a class="mx-5 my-3 font-medium text-sky-400 hover:underline" href="blog.html">Blog</a>
+         <a class="mx-5 my-3 font-medium text-zinc-400">About</a>
       </div>
-      <h1>About</h1>
-      <p>Include necessary information.</p>
+      <h1 class="text-center text-heading text-4xl text-zinc-50 font-bold">About</h1>
+      <p class="mx-5 text-body text-zinc-50"><span style="margin-left:20px"></span>Include necessary information.</p>
    </body>
 </html>
