--- a/pages/projects.html
+++ b/pages/projects.html
@@ -17,6 +17,8 @@
 
       <h1>Projects</h1>
       <p>Showcase of my awesome projects!</p>
+
+      <div id="links"></div>
       <div id="projects"></div>
 
       <script src="../source/projects.js"></script>
