Removed TS, changed style.

--- a/pages/about.html
+++ b/pages/about.html
@@ -15,7 +15,8 @@
          <a class="mx-5 my-3 font-medium text-sky-400 hover:underline" href="blog.html">Blog</a>
          <a class="mx-5 my-3 font-medium text-zinc-400">About</a>
       </div>
-      <h1 class="text-center text-heading text-4xl text-zinc-50 font-bold">About</h1>
+
+      <h1 class="my-5 text-center text-heading text-4xl text-zinc-50 font-bold">About</h1>
       <p class="mx-5 text-body text-zinc-50"><span style="margin-left:20px"></span>Include necessary information.</p>
    </body>
 </html>
