Added about me page.

--- a/projects/block_placer.html
+++ b/projects/block_placer.html
@@ -27,8 +27,9 @@
       <p class="mx-5 text-body text-zinc-50"><span style="margin-left:20px"></span>Playing with friends is really fun, but you can't always do it on a single machine like this game requires. That's why I might come back to this in the future and learn how to implement networking to let players play with each other around the world.</p>
 
       <h3 class="my-5 mx-5 text-heading text-3xl text-zinc-50 font-bold">Play</h3>
-      <p class="mx-5 text-body text-zinc-50"><span style="margin-left:20px"></span>Currently the game is only available on Github and licensed under MIT License. In future it'll also be available for free on Itch.io.</p>
+      <p class="mx-5 text-body text-zinc-50"><span style="margin-left:20px"></span>The game is available completely for free on Linux and MacOS. It is open-source and available on Github under MIT License.</p>
       <br><a class="mx-5 my-3 font-medium text-sky-400 hover:underline" href="https://github.com/Acerx-AMJ/block_placer">Link to Github</a>
+      <br><a class="mx-5 my-3 font-medium text-sky-400 hover:underline" href="https://acerxamj.itch.io/block-placer">Link to Itch.io</a>
 
       <h3 class="my-5 mx-5 text-heading text-3xl text-zinc-50 font-bold">Gallery</h3>
       <div class="place-items-center grid grid-cols-2 p-5 m-5 bg-zinc-800 rounded-xl">
