Fixed image displays.

--- a/pages/about.html
+++ b/pages/about.html
@@ -23,7 +23,7 @@
          <p class="mx-5 my-3 text-body text-zinc-50"><span style="margin-left:20px"></span>I made this website as a personal portfolio and project showcase, as well as to start writing blogs, as I've been journaling for some time now. Only I have access to write blogs, which go over topics of my interest and new updates for any of my projects. The blogs are accessible to anyone to read and subscribe to free of charge or advertisements. My website is open-source on <a class="font-medium text-sky-400 hover:underline" href="https://github.com/Acerx-AMJ/acerx-amj.github.io">Github</a> and it is licensed under MIT License, while all blogs are licensed under <a class="font-medium text-sky-400 hover:underline" href="https://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0</a>.</p>
       </div>
 
-      <img id="link-preview" class="absolute w-1/2 drop-shadow-lg drop-shadow-zinc-950/100" />
+      <img id="link-preview" style="display:none" class="absolute h-75 w-150 object-scale-down drop-shadow-lg drop-shadow-zinc-950/100" />
       <script src="../source/about.js"></script>
    </body>
 </html>
