Mobile fixes and style changes.

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -10,17 +10,18 @@
 
    <body class="bg-zinc-900">
       <div class="flex flex-row items-center justify-center">
-         <a class="mx-5 my-3 font-medium text-sky-400 hover:underline" href="../index.html">Home</a>
-         <a class="mx-5 my-3 font-medium text-zinc-400">Projects</a>
-         <a class="mx-5 my-3 font-medium text-sky-400 hover:underline" href="blog.html">Blog</a>
-         <a class="mx-5 my-3 font-medium text-sky-400 hover:underline" href="about.html">About</a>
+         <a class="sm:mx-5 mx-2.5 my-3 font-medium text-sky-400 hover:underline" href="../index.html">Home</a>
+         <a class="sm:mx-5 mx-2.5 my-3 font-medium text-zinc-400">Projects</a>
+         <a class="sm:mx-5 mx-2.5 my-3 font-medium text-sky-400 hover:underline" href="blog.html">Blog</a>
+         <a class="sm:mx-5 mx-2.5 my-3 font-medium text-sky-400 hover:underline" href="about.html">About</a>
       </div>
 
-      <h1 class="my-5 text-center text-heading text-4xl text-zinc-50 font-bold">Projects</h1>
-      <p class="mx-5 text-body text-zinc-50"><span style="margin-left:20px"></span>Showcase of my awesome projects!</p>
+      <div class="max-w-2xl mx-auto">
+         <h1 class="my-5 text-center text-heading text-4xl text-zinc-50 font-bold">Projects</h1>
+         <p class="mx-5 text-body text-zinc-50"><span style="margin-left:20px"></span>Showcase of my awesome projects!</p>
 
-      <div class="mx-5 grid grid-cols-1" id="projects"></div>
-
-      <script src="../source/projects.js"></script>
+         <div class="mx-5 grid grid-cols-1" id="projects"></div>
+         <script src="../source/projects.js"></script>
+      </div>
    </body>
 </html>
