--- a/index.html
+++ b/index.html
@@ -10,13 +10,15 @@
 
    <body class="bg-zinc-900">
       <div class="flex flex-row items-center justify-center">
-         <a class="mx-5 my-3 font-medium text-zinc-400">Home</a>
-         <a class="mx-5 my-3 font-medium text-sky-400 hover:underline" href="pages/projects.html">Projects</a>
-         <a class="mx-5 my-3 font-medium text-sky-400 hover:underline" href="pages/blog.html">Blog</a>
-         <a class="mx-5 my-3 font-medium text-sky-400 hover:underline" href="pages/about.html">About</a>
+         <a class="sm:mx-5 mx-2.5 my-3 font-medium text-zinc-400">Home</a>
+         <a class="sm:mx-5 mx-2.5 my-3 font-medium text-sky-400 hover:underline" href="pages/projects.html">Projects</a>
+         <a class="sm:mx-5 mx-2.5 my-3 font-medium text-sky-400 hover:underline" href="pages/blog.html">Blog</a>
+         <a class="sm:mx-5 mx-2.5 my-3 font-medium text-sky-400 hover:underline" href="pages/about.html">About</a>
       </div>
 
-      <h1 class="my-5 text-center text-heading text-4xl text-zinc-50 font-bold">Welcome to My Website!</h1>
-      <p class="mx-5 text-body text-zinc-50"><span style="margin-left:20px"></span>Everything's WIP!</p>
+      <div class="max-w-2xl mx-auto">
+         <h1 class="my-5 text-center text-heading text-4xl text-zinc-50 font-bold">Welcome to My Website!</h1>
+         <p class="mx-5 text-body text-zinc-50"><span style="margin-left:20px"></span>Everything's WIP!</p>
+      </div>
    </body>
 </html>
