--- a/pages/about.html
+++ b/pages/about.html
@@ -10,13 +10,13 @@
 
    <body class="bg-zinc-900">
       <div class="flex flex-row items-center justify-center">
-         <a class="mx-5 my-3 font-medium text-sky-400 hover:underline" href="../index.html">Home</a>
-         <a class="mx-5 my-3 font-medium text-sky-400 hover:underline" href="projects.html">Projects</a>
-         <a class="mx-5 my-3 font-medium text-sky-400 hover:underline" href="blog.html">Blog</a>
-         <a class="mx-5 my-3 font-medium text-zinc-400">About</a>
+         <a class="sm:mx-5 mx-2.5 my-3 font-medium text-sky-400 hover:underline" href="../index.html">Home</a>
+         <a class="sm:mx-5 mx-2.5 my-3 font-medium text-sky-400 hover:underline" href="projects.html">Projects</a>
+         <a class="sm:mx-5 mx-2.5 my-3 font-medium text-sky-400 hover:underline" href="blog.html">Blog</a>
+         <a class="sm:mx-5 mx-2.5 my-3 font-medium text-zinc-400">About</a>
       </div>
 
-      <div class="max-w-prose mx-auto">
+      <div class="max-w-2xl mx-auto">
          <h1 class="my-5 text-center text-heading text-4xl text-zinc-50 font-bold">About</h1>
          <p class="mx-5 my-3 text-body text-zinc-50"><span style="margin-left:20px"></span>I have experience with low level languages and DoD, as well as foundational skills for Arduino and web development. My favorite types of projects are games and interpreters and I like to work on projects from embedded systems to simple websites. I do this for my love for programming and I mostly code with C/C++, but occasionally also use Java or Javascript. The programming language does not matter to me and I'm really flexible and can learn new technologies easily.</p>
          <p class="mx-5 my-3 text-body text-zinc-50"><span style="margin-left:20px"></span>My journey began somewhere in the start of summer 2024, when I made my first web game using Javascript. Sadly, I didn't save it and everything about it is lost. In the end of August I picked up C++ and started making small terminal games and learned new things quickly. After a while the terminal got boring and I moved on and started making games with SFML library, I remember how hard it was for me at the time, but I kept doing it and eventually made my first real game - Pong. It felt amazing and right after moved to bigger and bigger games. At some point I decided to switch to Raylib and it was an amazing experience. Since then, I've made a lot of micro-projects and games like <a id="link-block-placer" class="font-medium text-sky-400 hover:underline" href="../projects/block_placer.html">Block Placer</a> and <a id="link-sandbox2d" class="font-medium text-sky-400 hover:underline" href="../projects/sandbox2d.html">Sandbox-2D</a>.</p>
