--- a/pages/blog.html
+++ b/pages/blog.html
@@ -10,13 +10,15 @@
 
    <body class="bg-zinc-900">
       <div class="flex flex-row items-center justify-center">
-         <a class="mx-5 my-3 font-medium text-sky-400 hover:underline" href="../index.html">Home</a>
-         <a class="mx-5 my-3 font-medium text-sky-400 hover:underline" href="projects.html">Projects</a>
-         <a class="mx-5 my-3 font-medium text-zinc-400">Blog</a>
-         <a class="mx-5 my-3 font-medium text-sky-400 hover:underline" href="about.html">About</a>
+         <a class="sm:mx-5 mx-2.5 my-3 font-medium text-sky-400 hover:underline" href="../index.html">Home</a>
+         <a class="sm:mx-5 mx-2.5 my-3 font-medium text-sky-400 hover:underline" href="projects.html">Projects</a>
+         <a class="sm:mx-5 mx-2.5 my-3 font-medium text-zinc-400">Blog</a>
+         <a class="sm:mx-5 mx-2.5 my-3 font-medium text-sky-400 hover:underline" href="about.html">About</a>
       </div>
 
-      <h1 class="my-5 text-center text-heading text-4xl text-zinc-50 font-bold">Blog</h1>
-      <p class="mx-5 text-body text-zinc-50"><span style="margin-left:20px"></span>This is my blog.</p>
+      <div class="max-w-2xl mx-auto">
+         <h1 class="my-5 text-center text-heading text-4xl text-zinc-50 font-bold">Blog</h1>
+         <p class="mx-5 text-body text-zinc-50"><span style="margin-left:20px"></span>This is my blog.</p>
+      </div>
    </body>
 </html>
