Added support for clicking on images to view them in fullscreen.

--- a/projects/sandbox2d.html
+++ b/projects/sandbox2d.html
@@ -35,20 +35,23 @@
          <br><a class="mx-5 my-3 font-medium text-sky-400 hover:underline" href="https://youtube.com/playlist?list=PL1QtXajvJAXc7bSy8mtwEIBQS9Clc-mjv&si=XDiw9BTXAgHvQVMk">Link to Youtube playlist</a>
 
          <h3 class="my-5 mx-5 text-heading text-3xl text-zinc-50 font-bold">Gallery</h3>
-         <div class="place-items-center grid grid-cols-2 p-5 m-5 bg-zinc-800 rounded-xl">
-            <img class="p-1" src="../assets/sandbox2d_9.png"/> 
-            <img class="p-1" src="../assets/sandbox2d_10.png"/> 
-            <img class="p-1" src="../assets/sandbox2d_11.png"/> 
-            <img class="p-1" src="../assets/sandbox2d_1.png"/> 
-            <img class="p-1" src="../assets/sandbox2d_2.png"/> 
-            <img class="p-1" src="../assets/sandbox2d_3.png"/> 
-            <img class="p-1" src="../assets/sandbox2d_4.png"/> 
-            <img class="p-1" src="../assets/sandbox2d_5.png"/> 
-            <img class="p-1" src="../assets/sandbox2d_6.png"/> 
-            <img class="p-1" src="../assets/sandbox2d_7.png"/> 
-            <img class="p-1" src="../assets/sandbox2d_8.png"/> 
-            <img class="p-1" src="../assets/sandbox2d_12.png"/> 
+         <div id="screen"></div>
+         <div id="gallery" class="place-items-center grid grid-cols-2 p-5 m-5 bg-zinc-800 rounded-xl">
+            <img src="../assets/sandbox2d_9.png"/> 
+            <img src="../assets/sandbox2d_10.png"/> 
+            <img src="../assets/sandbox2d_11.png"/> 
+            <img src="../assets/sandbox2d_1.png"/> 
+            <img src="../assets/sandbox2d_2.png"/> 
+            <img src="../assets/sandbox2d_3.png"/> 
+            <img src="../assets/sandbox2d_4.png"/> 
+            <img src="../assets/sandbox2d_5.png"/> 
+            <img src="../assets/sandbox2d_6.png"/> 
+            <img src="../assets/sandbox2d_7.png"/> 
+            <img src="../assets/sandbox2d_8.png"/> 
+            <img src="../assets/sandbox2d_12.png"/> 
          </div>
+
+         <script src="../source/gallery.js"></script>
       </div>
    </body>
 </html>
