--- a/projects/block_placer.html
+++ b/projects/block_placer.html
@@ -33,12 +33,15 @@
          <br><a class="mx-5 my-3 font-medium text-sky-400 hover:underline" href="https://acerxamj.itch.io/block-placer">Link to Itch.io</a>
 
          <h3 class="my-5 mx-5 text-heading text-3xl text-zinc-50 font-bold">Gallery</h3>
-         <div class="place-items-center grid grid-cols-2 p-5 m-5 bg-zinc-800 rounded-xl">
-            <img class="p-1" src="../assets/block_placer_1.png"/> 
-            <img class="p-1" src="../assets/block_placer_2.png"/> 
-            <img class="p-1" src="../assets/block_placer_3.png"/> 
-            <img class="p-1" src="../assets/block_placer_4.png"/> 
+         <div id="screen"></div>
+         <div id="gallery" class="place-items-center grid grid-cols-2 p-5 m-5 bg-zinc-800 rounded-xl">
+            <img src="../assets/block_placer_1.png"/> 
+            <img src="../assets/block_placer_2.png"/> 
+            <img src="../assets/block_placer_3.png"/> 
+            <img src="../assets/block_placer_4.png"/> 
          </div>
       </div>
+
+      <script src="../source/gallery.js"></script>
    </body>
 </html>
