--- a/pages/blog.html
+++ b/pages/blog.html
@@ -5,20 +5,29 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>Blog</title>
+
       <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
    </head>
 
-   <body class="bg-zinc-900">
+   <body class="bg-zinc-900 flex flex-col h-screen justify-between">
       <div class="flex flex-row items-center justify-center">
-         <a class="sm:mx-5 mx-2.5 my-3 font-medium text-sky-400 hover:underline" href="../index.html">Home</a>
+         <a class="sm:mx-5 mx-2.5 my-3 font-medium text-sky-400 hover:underline" href="index.html">Home</a>
          <a class="sm:mx-5 mx-2.5 my-3 font-medium text-sky-400 hover:underline" href="projects.html">Projects</a>
          <a class="sm:mx-5 mx-2.5 my-3 font-medium text-zinc-400">Blog</a>
          <a class="sm:mx-5 mx-2.5 my-3 font-medium text-sky-400 hover:underline" href="about.html">About</a>
       </div>
 
-      <div class="max-w-2xl mx-auto">
+      <div class="max-w-2xl mx-auto mb-auto">
          <h1 class="my-5 text-center text-heading text-4xl text-zinc-50 font-bold">Blog</h1>
          <p class="mx-5 text-body text-zinc-50"><span style="margin-left:20px"></span>This is my blog.</p>
       </div>
+
+      <div id="footer"></div>
+      <script>
+         $('#footer').load('../templates/footer.html', function() {
+            $('#copyright-notice')[0].innerText = `© ${new Date().getFullYear()} DANIEL VISHNEVSKY`
+         })
+      </script>
    </body>
 </html>
