--- a/pages/index.html
+++ b/pages/index.html
@@ -4,26 +4,23 @@
    <head>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>Projects</title>
+      <title>Home</title>
 
       <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
    </head>
 
    <body class="bg-zinc-900 flex flex-col h-screen justify-between">
-      <div class="flex flex-row items-center justify-center">
-         <a class="sm:mx-5 mx-2.5 my-3 font-medium text-sky-400 hover:underline" href="index.html">Home</a>
-         <a class="sm:mx-5 mx-2.5 my-3 font-medium text-zinc-400">Projects</a>
+      <header class="flex flex-row items-center justify-center">
+         <a class="sm:mx-5 mx-2.5 my-3 font-medium text-zinc-400">Home</a>
+         <a class="sm:mx-5 mx-2.5 my-3 font-medium text-sky-400 hover:underline" href="projects.html">Projects</a>
          <a class="sm:mx-5 mx-2.5 my-3 font-medium text-sky-400 hover:underline" href="blog.html">Blog</a>
          <a class="sm:mx-5 mx-2.5 my-3 font-medium text-sky-400 hover:underline" href="about.html">About</a>
-      </div>
+      </header>
 
       <div class="max-w-2xl mx-auto mb-auto">
-         <h1 class="my-5 text-center text-heading text-4xl text-zinc-50 font-bold">Projects</h1>
-         <p class="mx-5 text-body text-zinc-50"><span style="margin-left:20px"></span>Showcase of my awesome projects!</p>
-
-         <div class="mx-5 grid grid-cols-1" id="projects"></div>
-         <script src="../source/projects.js"></script>
+         <h1 class="my-5 text-center text-heading text-4xl text-zinc-50 font-bold">Welcome to My Website!</h1>
+         <p class="mx-5 text-body text-zinc-50"><span style="margin-left:20px"></span>Everything's WIP!</p>
       </div>
 
       <div id="footer"></div>
