--- a/projects/block_placer.html
+++ b/projects/block_placer.html
@@ -11,12 +11,7 @@
    </head>
 
    <body class="bg-zinc-900 flex flex-col h-screen justify-between">
-      <div class="flex flex-row items-center justify-center">
-         <a class="sm:mx-5 mx-2.5 my-3 font-medium text-sky-400 hover:underline" href="../pages/index.html">Home</a>
-         <a class="sm:mx-5 mx-2.5 my-3 font-medium text-sky-400 hover:underline" href="../pages/projects.html">Projects</a>
-         <a class="sm:mx-5 mx-2.5 my-3 font-medium text-sky-400 hover:underline" href="../pages/blog.html">Blog</a>
-         <a class="sm:mx-5 mx-2.5 my-3 font-medium text-sky-400 hover:underline" href="../pages/about.html">About</a>
-      </div>
+      <div id="header"></div>
 
       <div class="max-w-2xl mx-auto mb-auto">
          <h1 class="my-5 text-center text-heading text-4xl text-zinc-50 font-bold">Block Placer</h1>
@@ -47,6 +42,7 @@
 
       <div id="footer"></div>
       <script>
+         $('#header').load('../templates/header.html')
          $('#footer').load('../templates/footer.html', function() {
             $('#copyright-notice')[0].innerText = `© ${new Date().getFullYear()} DANIEL VISHNEVSKY`
          })
