Changed styles, made everything wider.

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -15,9 +15,9 @@
 
       <div class="max-w-2xl mx-auto mb-auto">
          <h1 class="my-5 text-center text-heading text-4xl text-zinc-50 font-bold">Projects</h1>
-         <p class="mx-5 text-body text-zinc-50"><span style="margin-left:20px"></span>You'll find a list of my projects here including projects I have not published on Github, but most of them are and their source-code can be found <a class="font-medium text-sky-400 hover:underline" href="https://github.com/Acerx-AMJ">here</a>.</p>
+         <p class="text-body text-zinc-50"><span style="margin-left:20px"></span>You'll find a list of my projects here including projects I have not published on Github, but most of them are and their source-code can be found <a class="font-medium text-sky-400 hover:underline" href="https://github.com/Acerx-AMJ">here</a>.</p>
 
-         <div class="mx-5 grid grid-cols-1" id="projects"></div>
+         <div class="grid grid-cols-1" id="projects"></div>
          <script src="../source/projects.js"></script>
       </div>
 
