--- a/projects/pong.html
+++ b/projects/pong.html
@@ -14,18 +14,19 @@
       <div id="header"></div>
 
       <div class="max-w-2xl mx-auto mb-auto">
-         <h1 class="my-5 text-center text-heading text-4xl text-zinc-50 font-bold">Pong</h1>
-         <img class="mx-auto" src="../assets/pong_2.png"/>
+         <h1 class="mt-5 text-center text-heading text-4xl text-zinc-50 font-bold">Pong</h1>
+         <p class="my-2 text-center text-heading text-zinc-400">Daniel Vishnevsky</p>
+         <img class="mx-auto rounded-xl" src="../assets/pong_2.png"/>
 
-         <h3 class="my-5 mx-5 text-heading text-3xl text-zinc-50 font-bold">About</h3>
-         <p class="mx-5 text-body text-zinc-50"><span style="margin-left:20px"></span>At first it was my first ever graphical game made with C++ and I used pure SFML. It didn't feature things like bots yet and looked more crude. But after making my own library CX, which was based on SFML, but made it more convenient and easier to use, I ported it to my new library to see how it felt to use. It was still heavily object-oriented, but it was better than what SFML could provide for me. Eventually I fully remade it and even added more features. This project taught me game development and SFML. To learn something, you have to take the smaller steps first.</p>
+         <h3 class="my-5 text-heading text-3xl text-zinc-50 font-bold">About</h3>
+         <p class="text-body text-zinc-50"><span style="margin-left:20px"></span>At first it was my first ever graphical game made with C++ and I used pure SFML. It didn't feature things like bots yet and looked more crude. But after making my own library CX, which was based on SFML, but made it more convenient and easier to use, I ported it to my new library to see how it felt to use. It was still heavily object-oriented, but it was better than what SFML could provide for me. Eventually I fully remade it and even added more features. This project taught me game development and SFML. To learn something, you have to take the smaller steps first.</p>
 
-         <h3 class="my-5 mx-5 text-heading text-3xl text-zinc-50 font-bold">Features</h3>
-         <p class="mx-5 text-body text-zinc-50"><span style="margin-left:20px"></span>This project features two modes - versus and versus bot mode. You can choose to play with a friend on the same machine or play against 4 different difficulties of bots. I also worked on a lot of little things like getting it to feel good with bouncing off of walls and slightly slippery movement. The ball moves faster the longer the game goes, but it doesn't phase through the paddles. I'm really proud of making a bot that is almost impossible to beat, it uses raycasting from my library to predict where the ball will go.</p>
+         <h3 class="my-5 text-heading text-3xl text-zinc-50 font-bold">Features</h3>
+         <p class="text-body text-zinc-50"><span style="margin-left:20px"></span>This project features two modes - versus and versus bot mode. You can choose to play with a friend on the same machine or play against 4 different difficulties of bots. I also worked on a lot of little things like getting it to feel good with bouncing off of walls and slightly slippery movement. The ball moves faster the longer the game goes, but it doesn't phase through the paddles. I'm really proud of making a bot that is almost impossible to beat, it uses raycasting from my library to predict where the ball will go.</p>
 
-         <h3 class="my-5 mx-5 text-heading text-3xl text-zinc-50 font-bold">Gallery</h3>
+         <h3 class="my-5 text-heading text-3xl text-zinc-50 font-bold">Gallery</h3>
          <div id="screen"></div>
-         <div id="gallery" class="place-items-center grid grid-cols-2 p-5 m-5 bg-zinc-800 rounded-xl">
+         <div id="gallery">
             <img src="../assets/pong_1.png"/> 
             <img src="../assets/pong_2.png"/> 
             <img src="../assets/pong_3.png"/> 
