--- a/projects/sandbox2d.html
+++ b/projects/sandbox2d.html
@@ -13,26 +13,24 @@
       <div id="header"></div>
 
       <div class="max-w-2xl mx-auto mb-auto">
-         <h1 class="my-5 text-center text-heading text-4xl text-zinc-50 font-bold">Sandbox-2D</h1>
-         <img class="mx-auto" src="../assets/sandbox2d_12.png"/>
+         <h1 class="mt-5 text-center text-heading text-4xl text-zinc-50 font-bold">Sandbox-2D</h1>
+         <p class="my-2 text-center text-heading text-zinc-400">Daniel Vishnevsky</p>
+         <img class="mx-auto rounded-xl" src="../assets/sandbox2d_12.png"/>
 
-         <h3 class="my-5 mx-5 text-heading text-3xl text-zinc-50 font-bold">About</h3>
-         <p class="mx-5 text-body text-zinc-50"><span style="margin-left:20px"></span>I made Sandbox-2D with C++ and Raylib and during the creation of this project I learned DoD and simplistic design. No other project has taught me as much as this one. I truly love making it and it'll forever stay in my memory. It also helped me hone my pixel art skills, as I needed to create the entirety of pixel art myself from the 8x8 blocks to the 256x144 backgrounds.</p>
+         <h3 class="my-5 text-heading text-3xl text-zinc-50 font-bold">About</h3>
+         <p class="text-body text-zinc-50"><span style="margin-left:20px"></span>I made Sandbox-2D with C++ and Raylib and during the creation of this project I learned DoD and simplistic design. No other project has taught me as much as this one. I truly love making it and it'll forever stay in my memory. It also helped me hone my pixel art skills, as I needed to create the entirety of pixel art myself from the 8x8 blocks to the 256x144 backgrounds.</p>
 
-         <h3 class="my-5 mx-5 text-heading text-3xl text-zinc-50 font-bold">Features</h3>
-         <p class="mx-5 text-body text-zinc-50"><span style="margin-left:20px"></span>On the lower level Sandbox-2D has features like state handler, resource and sound, and particle managers and a lot of different UI element handlers for buttons, progress bars and such.</p>
-         <p class="mx-5 text-body text-zinc-50"><span style="margin-left:20px"></span>But gameplay wise it features world generation, world management, player controller, lighting and liquid systems, furniture system and survival mode.</p>
-         <p class="mx-5 text-body text-zinc-50"><span style="margin-left:20px"></span>Feature wise this is my biggest project to this point, it includes things I've never done before and it was truly an amazing learning experience. I have gone a really long way in the short time I've been making it and I still have a lot to add and I have much more to learn from this project.</p>
+         <h3 class="my-5 text-heading text-3xl text-zinc-50 font-bold">Features</h3>
+         <p class="text-body text-zinc-50"><span style="margin-left:20px"></span>On the lower level Sandbox-2D has features like state handler, resource and sound, and particle managers and a lot of different UI element handlers for buttons, progress bars and such.</p>
+         <p class="text-body text-zinc-50"><span style="margin-left:20px"></span>But gameplay wise it features world generation, world management, player controller, lighting and liquid systems, furniture system and survival mode.</p>
+         <p class="text-body text-zinc-50"><span style="margin-left:20px"></span>Feature wise this is my biggest project to this point, it includes things I've never done before and it was truly an amazing learning experience. I have gone a really long way in the short time I've been making it and I still have a lot to add and I have much more to learn from this project.</p>
 
-         <h3 class="my-5 mx-5 text-heading text-3xl text-zinc-50 font-bold">Play</h3>
-         <p class="mx-5 text-body text-zinc-50"><span style="margin-left:20px"></span>The game is available completely for free on Windows, Linux and MacOS. It is also open-source and licensed under the MIT License.</p>
-         <br><a class="mx-5 my-3 font-medium text-sky-400 hover:underline" href="https://github.com/Acerx-AMJ/Sandbox-2D">Link to Github</a>
-         <br><a class="mx-5 my-3 font-medium text-sky-400 hover:underline" href="https://acerxamj.itch.io/sandbox-2d">Link to Itch.io</a>
-         <br><a class="mx-5 my-3 font-medium text-sky-400 hover:underline" href="https://youtube.com/playlist?list=PL1QtXajvJAXc7bSy8mtwEIBQS9Clc-mjv&si=XDiw9BTXAgHvQVMk">Link to Youtube playlist</a>
+         <h3 class="my-5 text-heading text-3xl text-zinc-50 font-bold">Play</h3>
+         <p class="text-body text-zinc-50"><span style="margin-left:20px"></span>The game is available completely for free on Windows, Linux and MacOS on <a class="my-3 font-medium text-sky-400 hover:underline" href="https://acerxamj.itch.io/sandbox-2d">Itch.io</a>. It is also open-source on <a class="my-3 font-medium text-sky-400 hover:underline" href="https://github.com/Acerx-AMJ/Sandbox-2D">Github</a> and licensed under the MIT License. A playlist of videos can be found on <a class="my-3 font-medium text-sky-400 hover:underline" href="https://youtube.com/playlist?list=PL1QtXajvJAXc7bSy8mtwEIBQS9Clc-mjv&si=XDiw9BTXAgHvQVMk">Youtube</a>.</p>
 
-         <h3 class="my-5 mx-5 text-heading text-3xl text-zinc-50 font-bold">Gallery</h3>
+         <h3 class="my-5 text-heading text-3xl text-zinc-50 font-bold">Gallery</h3>
          <div id="screen"></div>
-         <div id="gallery" class="place-items-center grid grid-cols-2 p-5 m-5 bg-zinc-800 rounded-xl">
+         <div id="gallery" class="">
             <img src="../assets/sandbox2d_9.png"/> 
             <img src="../assets/sandbox2d_10.png"/> 
             <img src="../assets/sandbox2d_11.png"/> 
