--- a/pages/blog.html
+++ b/pages/blog.html
@@ -15,7 +15,7 @@
 
       <div class="max-w-2xl mx-auto mb-auto">
          <h1 class="my-5 text-center text-heading text-4xl text-zinc-50 font-bold">Blog</h1>
-         <p class="mx-5 text-body text-zinc-50"><span style="margin-left:20px"></span>This is my blog.</p>
+         <p class="text-body text-zinc-50"><span style="margin-left:20px"></span>This is my blog.</p>
       </div>
 
       <div id="footer"></div>
