--- a/projects/block_placer.html
+++ b/projects/block_placer.html
@@ -14,24 +14,24 @@
       <div id="header"></div>
 
       <div class="max-w-2xl mx-auto mb-auto">
-         <h1 class="my-5 text-center text-heading text-4xl text-zinc-50 font-bold">Block Placer</h1>
-         <img class="mx-auto" src="../assets/block_placer_4.png"/>
+         <h1 class="mt-5 text-center text-heading text-4xl text-zinc-50 font-bold">Block Placer</h1>
+         <p class="my-2 text-center text-heading text-zinc-400">Daniel Vishnevsky</p>
+         <img class="mx-auto rounded-xl" src="../assets/block_placer_4.png"/>
 
-         <h3 class="my-5 mx-5 text-heading text-3xl text-zinc-50 font-bold">About</h3>
-         <p class="mx-5 text-body text-zinc-50"><span style="margin-left:20px"></span>Block Placer is a game heavily inspired by Tetris. It is made with C++ and Raylib and I used this project to transition from using SFML to Raylib. It served its purpose well and I learned the foundations of Raylib. I found that Raylib is way easier to use than SFML and just as useful if not more. This is a great project for a beginner to make as it teaches a lot about game design and logic.</p>
+         <h3 class="my-5 text-heading text-3xl text-zinc-50 font-bold">About</h3>
+         <p class="text-body text-zinc-50"><span style="margin-left:20px"></span>Block Placer is a game heavily inspired by Tetris. It is made with C++ and Raylib and I used this project to transition from using SFML to Raylib. It served its purpose well and I learned the foundations of Raylib. I found that Raylib is way easier to use than SFML and just as useful if not more. This is a great project for a beginner to make as it teaches a lot about game design and logic.</p>
 
-         <h3 class="my-5 mx-5 text-heading text-3xl text-zinc-50 font-bold">Features</h3>
-         <p class="mx-5 text-body text-zinc-50"><span style="margin-left:20px"></span>Different game states are handled with a state handler. Unlike most Tetris clones, this one features 3 playable modes - solo, co-op and versus. This is what I'm most proud of. In co-op mode you can play with a friend on a larger map or challenge yourself to control two tetrominoes at the same time - both are extremely fun to do! But if you're more on the competitive side then you can challenge your friends in versus.</p>
-         <p class="mx-5 text-body text-zinc-50"><span style="margin-left:20px"></span>Playing with friends is really fun, but you can't always do it on a single machine like this game requires. That's why I might come back to this in the future and learn how to implement networking to let players play with each other around the world.</p>
+         <h3 class="my-5 text-heading text-3xl text-zinc-50 font-bold">Features</h3>
+         <p class="text-body text-zinc-50"><span style="margin-left:20px"></span>Different game states are handled with a state handler. Unlike most Tetris clones, this one features 3 playable modes - solo, co-op and versus. This is what I'm most proud of. In co-op mode you can play with a friend on a larger map or challenge yourself to control two tetrominoes at the same time - both are extremely fun to do! But if you're more on the competitive side then you can challenge your friends in versus.</p>
+         <p class="text-body text-zinc-50"><span style="margin-left:20px"></span></p>
+         <p class="text-body text-zinc-50"><span style="margin-left:20px"></span>Playing with friends is really fun, but you can't always do it on a single machine like this game requires. That's why I might come back to this in the future and learn how to implement networking to let players play with each other around the world.</p>
 
-         <h3 class="my-5 mx-5 text-heading text-3xl text-zinc-50 font-bold">Play</h3>
-         <p class="mx-5 text-body text-zinc-50"><span style="margin-left:20px"></span>The game is available completely for free on Linux and MacOS. It is open-source and available on Github under MIT License.</p>
-         <br><a class="mx-5 my-3 font-medium text-sky-400 hover:underline" href="https://github.com/Acerx-AMJ/block_placer">Link to Github</a>
-         <br><a class="mx-5 my-3 font-medium text-sky-400 hover:underline" href="https://acerxamj.itch.io/block-placer">Link to Itch.io</a>
+         <h3 class="my-5 text-heading text-3xl text-zinc-50 font-bold">Play</h3>
+         <p class="text-body text-zinc-50"><span style="margin-left:20px"></span>The game is available completely for free on Linux and MacOS on <a class="font-medium text-sky-400 hover:underline" href="https://acerxamj.itch.io/block-placer">Itch.io</a>. It is open-source and available on <a class="font-medium text-sky-400 hover:underline" href="https://github.com/Acerx-AMJ/block_placer">Github</a> under MIT License.</p>
 
-         <h3 class="my-5 mx-5 text-heading text-3xl text-zinc-50 font-bold">Gallery</h3>
+         <h3 class="my-5 text-heading text-3xl text-zinc-50 font-bold">Gallery</h3>
          <div id="screen"></div>
-         <div id="gallery" class="place-items-center grid grid-cols-2 p-5 m-5 bg-zinc-800 rounded-xl">
+         <div id="gallery">
             <img src="../assets/block_placer_1.png"/> 
             <img src="../assets/block_placer_2.png"/> 
             <img src="../assets/block_placer_3.png"/> 
