Updated text for Sandbox-2D.

--- a/projects/sandbox2d.html
+++ b/projects/sandbox2d.html
@@ -5,6 +5,8 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>Sandbox 2D</title>
+
+      <link href="../style/style.css" rel="stylesheet">
       <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
    </head>
@@ -18,13 +20,16 @@
          <img class="mx-auto rounded-xl" src="../assets/sandbox2d_12.png"/>
 
          <h3 class="my-5 text-heading text-3xl text-zinc-50 font-bold">About</h3>
-         <p class="text-body text-zinc-50"><span style="margin-left:20px"></span>I made Sandbox-2D with C++ and Raylib and during the creation of this project I learned DoD and simplistic design. No other project has taught me as much as this one. I truly love making it and it'll forever stay in my memory. It also helped me hone my pixel art skills, as I needed to create the entirety of pixel art myself from the 8x8 blocks to the 256x144 backgrounds.</p>
+         <p class="text-body text-zinc-50"><span style="margin-left:20px"></span>Sandbox-2D is a sandbox survival game where the player can build, survive or simply play around. It is a 2D fantasy sidescrolling tile game.</p>
 
          <h3 class="my-5 text-heading text-3xl text-zinc-50 font-bold">Features</h3>
-         <p class="text-body text-zinc-50"><span style="margin-left:20px"></span>On the lower level Sandbox-2D has features like state handler, resource and sound, and particle managers and a lot of different UI element handlers for buttons, progress bars and such.</p>
-         <p class="text-body text-zinc-50"><span style="margin-left:20px"></span>But gameplay wise it features world generation, world management, player controller, lighting and liquid systems, furniture system and survival mode.</p>
-         <p class="text-body text-zinc-50"><span style="margin-left:20px"></span>Feature wise this is my biggest project to this point, it includes things I've never done before and it was truly an amazing learning experience. I have gone a really long way in the short time I've been making it and I still have a lot to add and I have much more to learn from this project.</p>
-
+         <p class="text-body text-zinc-50"><span style="margin-left:20px"></span>Sandbox-2D has features too many to name. But I'll still list some of the bigger ones. First, world generation featuring a variety of biomes based on temperature and humidity. Each world is different and there's also an option to generate a flat world. Second, player controller - the player can move around, interact with the environment and get hurt by different hazards. The player also has the ability to break and place blocks.</p>
+         <p class="text-body text-zinc-50"><span style="margin-left:20px"></span>There are also a lot of features under physics and the renderer. The game handles sand, dirt and liquid physics. And the game handles 4 layers: background, furniture, liquids and blocks. Each layer interacts with the player or the other layers and are interconnected.</p>
+ 
+         <h3 class="my-5 text-heading text-3xl text-zinc-50 font-bold">Development</h3>
+         <p class="text-body text-zinc-50"><span style="margin-left:20px"></span>I made Sandbox-2D with C++ and Raylib and my primary goal was to learn how to structure and design a big game. While I'll rather classify this as a medium-scale project, I still think it has taught me everything I wanted and even more. I learned DoD and simple design and no other project has taught me as much as this one. I started working on Sandbox-2D on November 8th and I'm still doing so to this day.</p>
+         <p class="text-body text-zinc-50"><span style="margin-left:20px"></span>I've used Git since day one so all commit history is available at <a class="my-3 font-medium text-sky-400 hover:underline" href="https://github.com/Acerx-AMJ/Sandbox-2D/commits/main/">Github</a>. I've tried to implement the simplest thing I could and then slowly add features to it and in the gallery I posted pictures in a chronological order so it's easier to see the big changes I've made to the game. I'm really proud about the state it's in right now and it's the biggest project I've ever made. If I had to start fresh then I'd try to make the code even simpler than it is right now.</p>
+         
          <h3 class="my-5 text-heading text-3xl text-zinc-50 font-bold">Play</h3>
          <p class="text-body text-zinc-50"><span style="margin-left:20px"></span>The game is available completely for free on Windows, Linux and MacOS on <a class="my-3 font-medium text-sky-400 hover:underline" href="https://acerxamj.itch.io/sandbox-2d">Itch.io</a>. It is also open-source on <a class="my-3 font-medium text-sky-400 hover:underline" href="https://github.com/Acerx-AMJ/Sandbox-2D">Github</a> and licensed under the MIT License. A playlist of videos can be found on <a class="my-3 font-medium text-sky-400 hover:underline" href="https://youtube.com/playlist?list=PL1QtXajvJAXc7bSy8mtwEIBQS9Clc-mjv&si=XDiw9BTXAgHvQVMk">Youtube</a>.</p>
 
